// Request messages used to fetch tiles and resources
syntax = "proto3";

package androidx.wear.tiles.testing.proto;

import "device_parameters.proto";
import "state.proto";

option java_package = "androidx.wear.tiles.testing.proto";
option java_outer_classname = "RequestProto";

// Parameters passed to a Tile provider when the renderer is requesting a new
// version of the tile.
message TileRequest {
  // Parameters describing the device requesting the tile update.
  DeviceParameters device_parameters = 1;

  // The state that should be used when building the tile.
  State state = 2;
}

// Parameters passed to a Tile provider when the renderer is requesting a
// specific resource version.
message ResourcesRequest {
  // The version of the resources being fetched
  string version = 1;

  // Requested resource IDs. If not specified, all resources for the given
  // version must be provided in the response.
  repeated string resource_ids = 2;

  // Parameters describing the device requesting the resources.
  DeviceParameters device_parameters = 3;
}
